clean up revision navigation so that the "revlist" you're browsing is remembered after you click through the "(changes)" list for a file.  also clean up the navbar so that it fetches its info from a sub-container, and let most pages fill that container from a standard method in history. trimmed the ranges shown in the navbar (no more -1, -3).  and finally, browsing into a folder should now work in inventory view.

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -309,19 +309,22 @@ h1 .filename {
 	font-size: smaller;
 	padding-left: 1em;
 	padding-top: 1em;
-	border-top: 1px solid #8cacbb;
+	padding-bottom: 1em;
 	text-align: left;
+	background-color: #dee7ec;
 }
 
 .diff-chunk {
     font-size: 66%;
-    margin-top: 1em;
+    margin-top: 0px;
 	margin-bottom: 1em;
 }
 
 .diff-chunk th.lineno {
 	font-weight: bold;
     border-bottom: 1px solid #8cacbb;
+    border-top: 1px solid #dee7ec;
+    border-left: 1px solid #dee7ec;
 }
 .diff-chunk .insert {
 	background-color: #b0efb0;
