add a caching system for revision/change entries, since those should never change, and stuff the history object into a global shared (locked) var so we don't rebuild the revision-graph cache on every page load.

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -408,6 +408,10 @@ table.inventory th.permissions {
     width: 6em;
 }
 
+span.folder {
+    font-family: monospace;
+}
+
 
 /* ----- file annotation ----- */
 
