fix a thread-unsafety bug in bzrlib's progress bar system that was vexing me, and do various cleanups on the ui for consistency.  added lots of locking to the history object before i figured out about the progress bar thing.

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -402,6 +402,7 @@ table.inventory th.permissions {
 
 .inventory td.revision {
     width: 8em;
+    padding-right: 1em;
 }
 
 .inventory td.changes-link {
