another pile of semi-related changes: * added a download link to the annotate page * fixed all pages to track paths by file_id, not (changable) path * some small optimizations * don't bother to display annotation for a binary file

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -253,7 +253,7 @@ div.links div {
     font-family: monospace;
 }
 
-.log-entries .revision-details td.files a.jump {
+.log-entries .revision-details td.files .jump {
     font-size: smaller;
 }
 
