--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -35,6 +35,17 @@ h1 .filename {
     color: #47626e;
 }
 
+.footer {
+	margin-top: 1em;
+	margin-botom: 2em;
+}
+.footer .banner {
+	margin-right: 5px;
+}
+.footer .banner img {
+	border: 1px solid #8cacbb;
+}
+
 
 /* ----- navigation bar at the top ----- */
 
