--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -37,7 +37,7 @@ h1 .filename {
 
 .footer {
 	margin-top: 1em;
-	margin-botom: 2em;
+	margin-bottom: 1em;
 }
 .footer .banner {
 	margin-right: 5px;
@@ -580,7 +580,7 @@ span.folder {
 }
 
 .browse-view table tr.heading {
-    xbackground-color: #8cacbb;
+    background-color: #8cacbb;
     border-bottom: solid 1px #8cacbb;
     font-size: smaller;
 }
