--- a/homepage/loggerhead.css
+++ b/homepage/loggerhead.css
@@ -23,7 +23,7 @@ a:hover {
 h2 {
     font-size: 100%;
     margin-left: 2em;
-    xmargin-right: 2em;
+    margin-right: 2em;
     margin-top: 1.5em;
     border-bottom: solid 1px black;
 }
