Added Atom feed on browse page. Adjusted relative width of columns to give more room for branch description

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -605,12 +605,12 @@ span.folder {
 }
 
 .browse-view td.name {
-	width: 25%;
+	width: 15%;
 }
 
 .browse-view td.last-update {
 	font-size: smaller;
-	width: 20%;
+	width: 15%;
 }
 
 .browse-view td.url {
@@ -618,4 +618,8 @@ span.folder {
 	font-size: smaller;
 	padding-left: 3em;
 	padding-top: 0px;
+}
+
+.browse-view td.feed {
+	width: 1%;
 }
