refactor and clean up the javascript code for the expand/collapse buttons, and apply the same logic to files being diff'd on the revision view.  the primary difference is that a revision starts out expanded, since otherwise there's not much to see.  also, change the terminology from "show/hide" to "expand/collapse" on nicholas allen's recommendation.

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -46,6 +46,11 @@ h1 .filename {
 	border: 1px solid #8cacbb;
 }
 
+.hide-all {
+    font-size: smaller;
+}
+
+
 
 /* ----- navigation bar at the top ----- */
 
@@ -183,10 +188,6 @@ div.links div {
 
 /* ----- changelog page ----- */
 
-.hide-all {
-    font-size: smaller;
-}
-
 /* secret css-jutsu to make hidden margins vanish on a table */
 .log-entries table {
     border-collapse: collapse;
@@ -266,9 +267,9 @@ div.links div {
 }
 
 /* default state: hide all */
-.show-button { display: none; }
+.revision-header .hide-button { display: none; }
 .hidden-details { display: none; }
-.hide-all#hide-all { display: none; }
+.changelog .hide-all#hide-all { display: none; }
 
 
 /* ----- revision page ----- */
@@ -373,6 +374,9 @@ div.links div {
 .diff-block .diff-spacing {
 	line-height: 1em;
 }
+
+.diff-block .show-button { display: none; }
+.revision-page .hide-all#show-all { display: none; }
 
 .diff-insert {
     background-color: #b0efb0;
