use blue for inserts

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -409,7 +409,7 @@ div.links div {
 .collapse-style-sbs-show { display: none; }
 
 .diff-insert {
-    background-color: #b0efb0;
+    background-color: #9cc8ff;
 }
 .diff-delete {
     background-color: #ffa0a0;
