add a decorator to strip the whitespace from the generated html in the big pages.  (kid theoretically can do this on its own, but it's not hooked up from turbogears, and even if it was, it doesn't seem to work on html.) removing whitespace appears to trim a good 20-30% from the generated pages, so may help a lot for slow links.  in combination with the trimmed-down javascript names, some of the worst offenders (revisions with gigantic diffs) are now nearly half the size they were a few days ago.

--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -443,13 +443,17 @@ div.links div {
 }
 .diff .lineno-skip {
     width: 4em;
-    background-color: #dee7ec; 
+    background-color: #dee7ec;
 }
 .diff .info {
     color: blue;
     background-color: #dee7ec;
     margin-top: 15px;
 }
+/*
+.diff-context-skip {
+    background-color: #dee7ec;
+}*/
 
 
 /* ----- file inventory ----- */
