--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -209,8 +209,8 @@ div.links div {
 .log-entries .revision-header {
     background-color: #dee7ec;
     padding: 3px;
-    width: 80%;
-    margin-top: 1em;
+    width: 98%;
+    margin-top: 0.5em;
     margin-left: 1em;
 }
 
@@ -219,8 +219,17 @@ div.links div {
 }
 
 .log-entries .revision-header .revision-number {
-    width: 6em;
+    width: 3em;
     padding-left: 0.5em;
+}
+
+.log-entries .revision-header td.author {
+    font-size: smaller;
+    width: 20%;
+}
+.log-entries .revision-header td.date {
+    font-size: smaller;
+    width: 25%;
 }
 
 .log-entries .revision-header .inventory-link {
@@ -228,14 +237,14 @@ div.links div {
     vertical-align: middle;
     width: 4em;
     text-align: right;
-    padding-right: 0.5em;
+    padding-right: 2.5em;
 }
 
 .log-entries .revision-details-block {
     width: 80%;
     border: none;
     margin-left: 8em;
-    margin-bottom: 1.5em;
+    margin-bottom: 0.5em;
 }
 
 .log-entries .revision-details table {
@@ -250,17 +259,6 @@ div.links div {
     vertical-align: top;
 }
 
-.log-entries .revision-details td.date {
-/*    font-family: monospace; */
-}
-
-.log-entries .revision-details th.files {
-    padding-top: 1em;
-}
-
-.log-entries .revision-details td.files {
-    padding-top: 1em;
-}
 
 .log-entries .revision-details td.files .filename {
     font-family: monospace;
@@ -270,12 +268,8 @@ div.links div {
     font-size: smaller;
 }
 
-.log-entries .revision-details th.description {
-    padding-top: 1em;
-}
 .log-entries .revision-details td.description {
     font-family: monospace;
-    padding-top: 1em;
 }
 
 /* default state: hide all */
@@ -470,7 +464,7 @@ div.links div {
 
 table.inventory {
     border-collapse: collapse;
-    width: 80%;
+    width: 100%;
     font-size: smaller;
     margin-top: 1em;
     border: 1px solid #8cacbb;
@@ -513,14 +507,15 @@ table.inventory th.permissions {
 }
 
 .inventory td.revision {
-    width: 8em;
+    width: 5em;
     padding-right: 1.5em;
+    text-align: right;
 }
 
 .inventory td.date {
     font-family: monospace;
     font-size: smaller;
-    width: 10em;
+    width: 12em;
     padding-right: 1.5em;
 }
 
